The font size for selects and buttons needs to reduce the font size by 2 points from the default font size set in prefs b=53744 a=buster