layout/style/nsCSSStyleRule.cpp
@@ -1681,7 +1681,7 @@ MapDeclarationFontInto(nsICSSDeclaration* aDeclaration,
               case eSystemAttr_Font_Button:
               case eSystemAttr_Font_List:
                 font->mFont.name.AssignWithConversion("sans-serif");
-                font->mFont.size = defaultFont.size;
+                font->mFont.size = defaultFont.size - NSIntPointsToTwips(2);
                 break;
             }
 #endif
